karnc/tests/fixtures/positive/118_workers_target_with_consume/src/commerce/money.karn
commons commerce.money

type CurrencyCode = String where Matches("[A-Z]{3}")

type Money = {
  minorUnits: Int where NonNegative,
  currency:   CurrencyCode,
}
