karnc/tests/fixtures/negative/160_generic_type_decl/input.karn
commons bad

type Box[T] = {
  value: Int,
}
